# sub-agents

./: .env.example  .gitignore  LICENSE  README.md  agents.yaml  mcp_config.example.json  pyproject.toml  requirements.txt
examples/: README.md  mcp_config.sse.example.json  mcp_config.stdio.example.json
prompts/: doc_keeper.md  explorer.md  reviewer.md
scripts/: start_server  stop_server
src/: config.py  launcher.py  model_resolver.py  router.py  server.py
tests/: test_async_tasks.py  test_cli_direct.py  test_config.py  test_doc_keeper_integration.py  test_doc_mcp.py  test_mcp_client.py  test_model_resolver.py  test_router.py
tools/: doc_mcp.py  gen_header_config.py
